本次更新： 1.将分词阶段改为json格式返回后解析分词结果。 2.增加功能：保留手动配置的默认值，与BI同步的默认值合并。 3.清理旧配置时，删除旧维度的词典文件及向量数据。在全部清理和全部创建后再重载词典缓存。 4.注释词典文件备份功能。 5.修改数据源类型检查，避免doris类型的数据源重复创建，增加doris适配器。 6.修改mapping阶段，1.keyword未匹配到数据时，”非向量模型只走mapping“检查因为MapInfo为空报错问题，2.大模型doparse也应进行text-2-dsl 7.修改缺少日期时友好提示。 8.处理问题提到全国的时候，大模型筛选条件可能出现省份名称=全国，内层sql规则转义会导致省份名称不等于全国，增加逻辑对于筛选条件等于默认值的维度，内层sql不处理。